--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Julio-Juarez.com</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="https://use.fontawesome.com/0b36dbb6a9.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   </head>
   <body>
-    <h1>Julio Juarez</h1>
-
+    <div class="site-wrapper">
+      <div class="cover-container">
+        <div class="overlay">
+          <div class="title">
+            <h1>
+              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to Code.", "and coffee.", "Lots of coffee...", "Come back soon." ]'></div>
+                <span class="wrap"></span>
+              </a>
+            </h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+  <script src="https://use.fontawesome.com/0b36dbb6a9.js"></script>
   <script src="main.js"></script>
 </html>
