--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="overlay">
           <div class="title">
             <h1>
-              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to Code.", "and coffee.", "Lots of coffee...", "Come back soon." ]'></div>
+              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to code.", "And coffee.", "Lots of coffee...", "Come back soon." ]'></div>
                 <span class="wrap"></span>
               </a>
             </h1>
@@ -27,4 +27,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
   <script src="https://use.fontawesome.com/0b36dbb6a9.js"></script>
   <script src="main.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-100776411-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </html>
