User can see nav bar. #6

--- a/index.html
+++ b/index.html
@@ -15,11 +15,25 @@
         <div class="overlay">
           <div class="title">
             <h1>
-              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to code.", "And coffee.", "Lots of coffee...", "Come back soon." ]'></div>
+              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to code.", "And coffee.", "Lots of coffee...", "Come back soon." ]'>
                 <span class="wrap"></span>
-              </a>
+              </div>
             </h1>
           </div>
+        </div>
+      </div>
+      <div class="sticky-nav">
+        <img class="brand" src="images/j.png">
+        <div class="links">
+          <a class="icons" href="https://github.com/juliocj360">
+            <i class="fa fa-github-alt" aria-hidden="true"></i>
+          </a>
+          <a class="icons" href="https://www.linkedin.com/in/juliocj360/">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+          </a>
+          <a class="icons" href="mailto:juliocj360@gmail.com">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
     </div>
