User can see footer. #11

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="site-wrapper">
-      <div class="cover-container">
+      <div class="cover-container" id="poop">
         <div class="overlay">
           <div class="title">
             <h1>
@@ -36,6 +36,15 @@
           </a>
         </div>
       </div>
+      <footer class="text-right">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              Copyright &copy; Julio Juarez 2017
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
