Users can see an about section. #15

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </head>
   <body>
     <div class="site-wrapper">
-      <div class="cover-container" id="poop">
+      <div class="cover-container">
         <div class="overlay">
           <div class="title">
             <h1>
-              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to code.", "And coffee.", "Lots of coffee...", "Come back soon." ]'>
+              <div class="typewrite" data-period="2000" data-type='[ "Hi, I&rsquo;m Julio.", "I love to code.", "And coffee.", "Lots of coffee..."]'>
                 <span class="wrap"></span>
               </div>
             </h1>
@@ -35,6 +35,13 @@
           <a class="icons" href="mailto:juliocj360@gmail.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
           </a>
+        </div>
+      </div>
+      <div class="container text-center">
+        <div class="jumbotron" id="about">
+            <img src="images/JJ.jpg" class="img-rounded">
+            <h2>Julio Juarez</h2>
+            <p>An innovative code whisperer with an eye for design.</p>
         </div>
       </div>
       <footer class="text-right">
