--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="sticky-nav">
-        <img class="brand" src="images/j.png">
+        <img class="brand" src="images/j2.png">
         <div class="links">
           <a class="icons" href="https://github.com/juliocj360">
             <i class="fa fa-github-alt" aria-hidden="true"></i>
