--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <title>Julio-Juarez.com</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Engagement|Quicksand" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/jtab.png">
   </head>
   <body>
-    <div class="site-wrapper">
+    <div class="site-wrapper" id="wrapper" style="font-family:'Quicksand',sans-serif;">
+      <div id="loader" style="position:fixed;height:100vh;width:100vw;background-color:white;z-index:999;">
+        <div style="display:table;width:100%;height:100%;">
+          <div style="display:table-cell;vertical-align:middle;">
+            <div style="text-align:center;"><p>Loading...</p><img src="images/rainbow.gif">
+            </div>
+          </div>
+        </div>
+      </div>
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <div class="cover-container">
         <div class="overlay">
           <div class="title">
