--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link rel="icon" type="image/x-icon" href="images/jtab.png">
   </head>
   <body>
-    <div class="site-wrapper" id="wrapper" style="font-family:'Quicksand',sans-serif;">
+    <div class="site-wrapper" id="wrapper">
       <div id="loader" style="position:fixed;height:100vh;width:100vw;background-color:white;z-index:999;">
         <div style="display:table;width:100%;height:100%;">
           <div style="display:table-cell;vertical-align:middle;">
-            <div style="text-align:center;"><p>Loading...</p><img src="images/rainbow.gif">
+            <div style="text-align:center;font-family:sans-serif;font-weight:100;"><p>Loading...</p><img src="images/rainbow.gif">
             </div>
           </div>
         </div>
       </div>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" property= "stylesheet" href="style.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <div class="cover-container">
         <div class="overlay">
