--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
           </div>
         </div>
       </div>
+      <div id="about-section"></div>
       <div class="sticky-nav">
-        <img class="brand" src="images/j2.png">
+        <img class="brand" src="images/j2.png" id="test">
         <div class="links">
           <a class="icons" href="https://github.com/juliocj360">
             <i class="fa fa-github-alt" aria-hidden="true"></i>
@@ -109,6 +110,7 @@
   </body>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.20.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/plugins/ScrollToPlugin.min.js"></script>
   <script src="https://use.fontawesome.com/0b36dbb6a9.js"></script>
   <script src="main.js"></script>
   <script>
